--- a/package/Dockerfile-mysql
+++ b/package/Dockerfile-mysql
@@ -1,6 +1,9 @@
 FROM mysql
 
-ENV TZ=/Asia/Shanghai
 ENV MYSQL_ROOT_PASSWORD=123456
+ENV TZ=/Asia/Shanghai
+
+RUN echo "--secure-file-priv=/var/lib/mysql" >> /etc/mysql/my.cnf
+RUN mkdir "/var/lib/mysql-files"
 
 COPY mysql-ini.sql /docker-entrypoint-initdb.d
