--- a/package/docker-compose.yaml
+++ b/package/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
       - "../volums/mysql-volum/conf:/etc/mysql"
       - "../volums/mysql-volum/mysql-files:/var/lib/mysql-files"
   redis:
-    image: redis:6.2.6
+    image: redis
     container_name: redis-project
     privileged: true
     ports:
@@ -37,12 +37,12 @@ services:
         ipv4_address: 172.19.0.3
     volumes:
       - "../volums/redis-volum/sysctl.conf:/etc/sysctl.conf"
+      - "../volums/redis-volum/data:/data"
     command:
       - /bin/bash
       - -c
       - |
         echo 551 > /proc/sys/net/core/somaxconn
-        redis-server /etc/sysctl.conf
   shand:
     build:
       context: .
