--- a/volums/mysql-volum/conf/my.cnf
+++ b/volums/mysql-volum/conf/my.cnf
@@ -27,9 +27,17 @@ secure-file-priv=/var/lib/mysql
 lower_case_table_names=1
 sql_mode=STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION
 max_connections=1000
-
-[client]
-default-character-set=utf8
+default-character-set=utf8mb4
+character_set_server=utf8mb4
 
 [mysql]
-default-character-set=utf8
+default-character-set=utf8mb4
+
+[mysql.server]
+default-character-set=utf8mb4
+
+[mysqld_safe]
+default-character-set=utf8mb4
+
+[client]
+default-character-set=utf8mb4
