添加Json日期转换格式

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,8 @@ spring:
     redis:
       host: ${shand.redis.host}
       port: 6379
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
